RESOLVED FIXED264617
[iOS] Fix appearance of date inputs in vertical writing mode
https://bugs.webkit.org/show_bug.cgi?id=264617
Summary [iOS] Fix appearance of date inputs in vertical writing mode
Aditya Keerthi
Reported 2023-11-10 13:16:11 PST
Use logical properties!
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-10 13:17:19 PST
Aditya Keerthi
Comment 2 2023-11-10 13:26:21 PST
EWS
Comment 3 2023-11-10 17:42:31 PST
Committed 270574@main (30625a91933c): <https://commits.webkit.org/270574@main> Reviewed commits have been landed. Closing PR #20329 and removing active labels.
Aditya Keerthi
Comment 4 2023-11-11 19:14:36 PST
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/43098
Note You need to log in before you can comment on or make changes to this bug.