[iOS] Fix appearance of date inputs in vertical writing mode https://bugs.webkit.org/show_bug.cgi?id=264617 rdar://118248730

Reviewed by Megan Gardner.

Use logical properties to ensure the `inline-size` is greater than the
`block-size` by default.

* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/forms/date-input-appearance-native-computed-style-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-writing-modes/forms/date-input-appearance-native-computed-style.html: Added.
* Source/WebCore/css/html.css:
(input:is([type="date"], [type="time"], [type="datetime-local"], [type="month"], [type="week"])):
* Source/WebCore/rendering/RenderThemeIOS.mm:
(WebCore::adjustInputElementButtonStyle):

Canonical link: https://commits.webkit.org/270574@main